HTML Templates gefixt Small und Medium TemplateRenderTests Templates und Dashboard mit Qute und TemplateExtensions sauberes Einbinden von Web Resourcen